# javalens-manager

./: .gitignore  LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  tsconfig.json  uninstall.sh
.github/workflows/: release.yml
docs/: architecture.md  bugs.md  future-sprint-enhancements.md  javalens-management.md  javalens-runtime-contract.md  maintainer-runbook.md  plan.md  roadmap.md  sprint-1-backlog.md  sprint-10-backlog.md  sprint-11-backlog.md  sprint-12-backlog.md  sprint-13-backlog.md  sprint-2-backlog.md  sprint-3-backlog.md  sprint-4-backlog.md  sprint-5-backlog.md  sprint-6-backlog.md  sprint-6.2-bytecode-spike.md  sprint-6.3-backlog.md  sprint-7-backlog.md  sprint-7-operations.md  sprint-7-qa-matrix.md  sprint-8-backlog.md  sprint-9-backlog.md  sprint-future-networked-service.md  tauri-bootstrap.md
docs/adr/: 0001-repo-purpose-and-boundaries.md  0002-runtime-process-model.md  0003-javalens-import-and-management.md  0004-tauri-frontend-choice.md  README.md
docs/release-notes/: v0.10.2.md  v0.10.4.md  v0.10.5.md  v0.10.6.md  v0.11.0.md  v0.11.1.md  v0.12.0.md  v0.13.0.md  v0.13.1.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  manager_service.rs  release_manager.rs  runtime_manager.rs
src/assets/: help.md
src/lib/: appVersion.ts
src/lib/api/: tauri.ts
src/lib/components/: AboutModal.svelte  ContextMenu.svelte  HelpView.svelte  ProjectForm.svelte  ProjectList.svelte  (+2 more)
(+1 files in other folders)
