[package]
name = "javalens-manager"
version = "0.1.0"
description = "Desktop manager for running JavaLens MCP across multiple Java projects."
edition = "2021"

[lib]
name = "javalens_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
