[package]
name = "javalens-manager"
version = "0.1.0"
description = "Desktop manager for running JavaLens MCP across multiple Java projects."
edition = "2021"

[lib]
name = "javalens_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
dirs = "6.0.0"
flate2 = "1.1.5"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
walkdir = "2.5.0"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
